# Photon-Chat

./: .gitignore  LICENSE  README.md  pubspec.yaml  render.yaml
.github/scripts/: release_notes.py
.github/workflows/: build.yml  reorder-releases.yml
android/: gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/knk_flutter/: MainActivity.kt
knk_flutter/: README.md
lib/: app_keys.dart  chat_wallpaper.dart  e2e.dart  fip.dart  guide_screen.dart  i18n.dart  knk_api.dart  local_store.dart  main.dart  message_guard.dart  notification_service.dart  nsfw_scanner.dart  obfuscate.dart  offline_queue.dart  onboarding_screen.dart  photon_api.dart  profanity_filter.dart  root_gate.dart  server_setup_screen.dart  theme.dart  translate_service.dart  update_checker.dart
lib/screens/: add_contact_screen.dart  chat_screen.dart  contacts_screen.dart  create_group_screen.dart  gif_creator_screen.dart  group_chat_screen.dart  join_group_screen.dart  pulse_ai_screen.dart  qr_scan_screen.dart  settings_screen.dart  wallpaper_screen.dart
server/: index.js  package.json
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  utils.cpp  utils.h  win32_window.cpp  win32_window.h
